Changes: - Assumptions colored and visible in nested explnaation choice - Bug correction: Last step - Bug correction: exit button - Renamed navigation buttons

--- a/visualization/src/App.css
+++ b/visualization/src/App.css
@@ -1,7 +1,6 @@
 .App {
     text-align: center;
     background-color: #FFFFFF;
-    /* padding: 50px; */
     padding-bottom: 50px;
     display: flex;
     flex-direction: column;
@@ -14,7 +13,6 @@
 .Clues {
     text-align: left;
     background-color: #FFFFFF;
-    /* padding-top: 50px; */
     display: flex;
     flex-direction: column;
     font-size: 15px;
@@ -86,16 +84,16 @@ h2:after{
 }
 
 .red-full-rectangle{
-    width:25px;
-    height:25px;
+    width:30px;
+    height:30px;
     background : #FF6600;
     border-style: dashed;
     border-width: thin;
     border-color:black;
 }
 .unsat-full-rectangle{
-    width:25px;
-    height:25px;
+    width:30px;
+    height:30px;
     background : red;
     border-style: dashed;
     border-width: thin;
@@ -103,8 +101,8 @@ h2:after{
 }
 
 .blue-full-rectangle{
-    width:25px;
-    height:25px;
+    width:30px;
+    height:30px;
     background : #003399; 
     border-style: dashed;
     border-width: thin;
@@ -120,19 +118,28 @@ h2:after{
 }
 
 .coral-full-rectangle{
-    width:25px;
-    height:25px;
+    width:30px;
+    height:30px;
     background : lightcoral; 
     border-style: dashed;
     border-width: thin;
     border-color:black;
 }
 .black-empty-rectangle{
-    width:25px;
-    height:25px;
+    width:30px;
+    height:30px;
     text-align: center;
     border-style: dashed;
     border-width: thin;
+    border-color:black;
+}
+
+.black-solid-empty-rectangle{
+    width:30px;
+    height:30px;
+    text-align: center;
+    border-style: solid;
+    border-width: 5px;
     border-color:black;
 }
 
@@ -143,12 +150,6 @@ h2:after{
 .buttonNavigationClues{
     width:20px;
 }
-
-.buttonNavigationCluesExit{
-    background-color: lightcoral;
-}
-
-
 
 .Disabled{
     pointer-events: none;
